<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/imageView"
            android:text="@string/strWelcome"
            android:textSize="25sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textView"
            android:text="@string/strHowToUse"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strInstalled"
            android:id="@+id/btnInstalled"
            android:layout_alignParentBottom="true"
            android:backgroundTint="#2196F3"
            android:textColor="@color/colorWhite" />

</RelativeLayout>